docs/src/css/_sidebar.scss
[data-theme='light'] .navbar-sidebar__item {
  --ifm-menu-link-sublist-icon-filter: none;
}

[data-theme='light'] .menu__list .header-github-link:before {
  filter: invert(1);
}

#__docusaurus {

  .theme-doc-sidebar-container,
  .navbar-sidebar__item {
    background-color: var(--dwc-surface-3);
    --ifm-menu-color: var(--dwc-color-default-10);
    --ifm-menu-color-background-active: var(--dwc-surface-2);
  }

  .menu__list-item.sidebar--item__hidden {
    display: none !important;
  }

  .menu {
    padding: .5rem !important;
  }

  .navbar-sidebar h3 {
    color: var(--ifm-menu-color);
  }

  .menu__list:not(.theme-doc-sidebar-menu) {
    margin-left: var(--ifm-menu-link-padding-horizontal);
    border-left: thin dotted var(--menu-level-indicator-color);
  }

  .menu__list-item.new-content,
  .menu__list-item.updated-content {
    position: relative;
  }

  .menu__list-item.new-content>a:not(.menu__link--sublist) {
    padding-right: 4rem;
  }

  .menu__list-item.updated-content>a:not(.menu__link--sublist) {
    padding-right: 5.5rem;
  }

  .menu__list-item.new-content:before,
  .menu__list-item.updated-content:before {
    display: inline-flex;
    align-items: center;
    box-sizing: border-box;
    height: 1.25rem;
    padding: 0 0.5rem;
    font-weight: 400;
    border-radius: 9999px;
    font-size: 0.75rem;
    line-height: 1;
    position: absolute;
    right: 0.75rem;
    top: 0.375rem;
    z-index: 1;
    pointer-events: none;
  }

  .theme-doc-sidebar-item-category.new-content:before,
  .theme-doc-sidebar-item-category.updated-content:before {
    right: 2.75rem;
  }

  .menu__list-item.new-content:before {
    content: "New";
    border: 1px solid var(--dwc-color-primary-85);
    background-color: var(--dwc-color-primary-alt);
    color: var(--dwc-color-primary);
  }

  .menu__list-item.updated-content:before {
    content: "Updated";
    border: 1px solid var(--dwc-color-gray-85);
    background-color: var(--dwc-color-gray-alt);
    color: var(--dwc-color-gray);
  }

  .theme-doc-sidebar-item-category.new-content ul .menu__list-item:before,
  .theme-doc-sidebar-item-category.updated-content ul .menu__list-item:before {
    display: none;
  }

  .has-new-content>.menu__list-item-collapsible {
    position: relative;
  }

  .has-new-content>.menu__list-item-collapsible:after {
    content: "";
    position: absolute;
    right: 2.75rem;
    top: 50%;
    transform: translateY(-50%);
    width: 0.25rem;
    height: 0.25rem;
    background-color: var(--dwc-color-primary);
    border-radius: 50%;
    animation: pulse 1.5s infinite ease-in-out;
    pointer-events: none;
  }

  @keyframes pulse {
    0%,
    100% {
      transform: scale(1);
      opacity: 1;
    }

    50% {
      transform: scale(1.5);
      opacity: 0.5;
    }
  }

  .navbar-sidebar__back {
    background-color: var(--dwc-color-primary-95);
    color: var(--ifm-menu-color);
  }

  .menu__link:hover {
    background-color: var(--dwc-color-primary-95) !important;
  }

  .menu__list-item-collapsible:hover {
    background-color: var(--dwc-color-primary-95);
    border-radius: 0.375rem;
  }

  .menu__list-item-collapsible .menu__link:hover,
  .menu__list-item-collapsible .menu__link--sublist:hover {
    background-color: transparent !important;
  }

  .menu__link--active {
    color: var(--dwc-color-primary);
  }

}

